--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@coreui/react": "^5.3.0",
     "@react-google-maps/api": "^2.19.3",
     "@vis.gl/react-google-maps": "^1.2.0",
+    "antd": "^5.22.1",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "google-map-react": "^2.2.1",
